src/objects/PB_AssocDocSignature__c.object
<CustomObject>
    <fields>
        <fullName>AssociatedDoc__c</fullName>
        <label>AssociatedDoc</label>
        <referenceTo>PB_AssociatedDoc__c</referenceTo>
        <relationshipName>AssocDocSignatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocSignature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocSignature</label>
        <referenceTo>PB_DocSignature__c</referenceTo>
        <relationshipName>AssocDocSignatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <label>PB_AssocDocSignature</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PB_AssocDocSignatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>